--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-icons": "^3.7.0",
     "react-responsive-navbar": "^1.0.11",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "react-scroll": "^1.7.14"
   },
   "scripts": {
     "start": "react-scripts start",
