--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.9.0",
     "react-icons": "^3.7.0",
     "react-responsive-navbar": "^1.0.11",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-scroll": "^1.7.14"
