--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-icons": "^3.7.0",
+    "react-responsive-carousel": "^3.1.50",
     "react-responsive-navbar": "^1.0.11",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.0.1",
