--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "gandlhaircut",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://luisarevalo21.github.io/gandlhaircut",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "gh-pages": "^2.1.1",
     "history": "^4.10.1",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
@@ -20,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
