--- a/package.json
+++ b/package.json
@@ -2,21 +2,21 @@
   "name": "gandlhaircut",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://luisarevalo21.github.io/gandlhaircut",
+  "homepage": "https://gandlhaircut.com",
   "dependencies": {
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
     "gh-pages": "^2.1.1",
     "history": "^4.10.1",
-    "react": "^16.9.0",
-    "react-bootstrap": "^1.0.0-beta.12",
-    "react-dom": "^16.9.0",
-    "react-icons": "^3.7.0",
-    "react-responsive-carousel": "^3.1.50",
+    "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-dom": "^16.12.0",
+    "react-icons": "^3.8.0",
+    "react-responsive-carousel": "^3.1.51",
     "react-responsive-navbar": "^1.0.11",
     "react-reveal": "^1.2.2",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
-    "react-scroll": "^1.7.14"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.3.0",
+    "react-scroll": "^1.7.15"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,6 +42,6 @@
     ]
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.10.2"
+    "@fortawesome/fontawesome-free": "^5.12.0"
   }
 }
