--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
+    "react-ga": "^2.7.0",
     "react-icons": "^3.7.0",
     "react-responsive-carousel": "^3.1.50",
     "react-responsive-navbar": "^1.0.11",
