--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "homepage": "https://gandlhaircut.com",
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "firebase": "^7.17.0",
     "gh-pages": "^2.1.1",
     "history": "^4.10.1",
     "react": "^16.9.0",
@@ -12,7 +14,7 @@
     "react-dom": "^16.9.0",
     "react-ga": "^2.7.0",
     "react-icons": "^3.7.0",
-    "react-responsive-carousel": "^3.1.50",
+    "react-responsive-carousel": "^3.2.9",
     "react-responsive-navbar": "^1.0.11",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
