--- a/package.json
+++ b/package.json
@@ -46,5 +46,16 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.12.0"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/luisarevalo21/gandlhaircut.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/luisarevalo21/gandlhaircut/issues"
   }
 }
